scrollbars fixed

--- a/frontend/src/styles/cmps/profile/_profile-entity-list.scss
+++ b/frontend/src/styles/cmps/profile/_profile-entity-list.scss
@@ -21,7 +21,7 @@
         }
 
         &::-webkit-scrollbar {
-            width: 5px;
+            width: 3px;
             background-color: $grey;
         }
 
